--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,12 +8,12 @@ sphinx:
 python:
   install:
     - method: pip
-    - path: .
+    - requirements: docs/requirements.txt
 
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.8"
+    python: "3.9"
 
 formats:
   - pdf
